--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/home.css" />
     <title>DragonBall API</title>
-</head>
-<body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-</body>
+  </head>
+  <body>
+        <header>
+          <nav>
+            <ul>
+              <li class="logo">
+                <a href="/index.html"> Home </a>
+              </li>
+              <li>
+                <a href="src/characters.html"> Characters </a>
+              </li>
+              <li>
+                <a href="src/planets.html"> Planets </a>
+              </li>
+            </ul>
+          </nav>
+        </header>
+        <main>
+              <div class="bg_img">
+                <div class="top-shadow-gradient">
+                  
+                </div>
+              </div>
+        </main>
+        <footer class="">
+          <div class="f-rows">
+            <div class="f-policy-container">
+              <a class="bottom-links">Sostenibilidad y Responsabilidad</a>
+              <a class="bottom-links">Información sobre Pago</a>
+              <a class="bottom-links">Política de Privacidad</a>
+              <a class="bottom-links">Términos de Uso del Sitio Web</a>
+              <a class="bottom-links">Condiciones de Venta</a>
+              <a class="bottom-links">Declaración de Conformidad</a>
+              <a class="bottom-links">Preferencias de consentimiento</a>
+            </div>
+          </div>
+          <div class="f-rows f-inc">
+            © 2024 COMICS ZONE  
+          </div>
+        </footer>    
+  </body>
 </html>
