central form and words added, home almost finished

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/index.css" />
-    <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="styles/css/home.css" />
     <title>DragonBall API</title>
   </head>
   <body>
@@ -26,7 +26,25 @@
         <main>
               <div class="bg_img">
                 <div class="top-shadow-gradient">
-                  
+                  <div class="m-container">
+                    <div class="m2-container">
+                    <h1 class="text-one">Comics, good magazines without limits and much more</h1>  
+                    <h3 class="text-two">From €3.49. Cancel anytime.</h3>  
+                    <p class="text-three">Want to stay up to date? Enter your email address to create or reactivate a COMICS ZONE subscription.</p>  
+                    <div class="f-email">
+                      <input
+                        type="text"
+                        class="f-form"
+                        name="email"
+                        placeholder="Dirección de correo electrónico"
+                      />
+                      <a id="button"
+                        ><img
+                          src="https://www.vans.it/ns-eu/vans-eu/dev/img/icons/arrow_right.svg"
+                      /></a>
+                    </div>
+                    </div>
+                </div>
                 </div>
               </div>
         </main>
@@ -43,7 +61,7 @@
             </div>
           </div>
           <div class="f-rows f-inc">
-            © 2024 COMICS ZONE  
+            © 2024 COMICS ZONE  Inc
           </div>
         </footer>    
   </body>
