home page finished but i might change the background color in the future

--- a/index.html
+++ b/index.html
@@ -8,61 +8,66 @@
     <title>DragonBall API</title>
   </head>
   <body>
-        <header>
-          <nav>
-            <ul>
-              <li class="logo">
-                <a href="/index.html"> Home </a>
-              </li>
-              <li>
-                <a href="src/characters.html"> Characters </a>
-              </li>
-              <li>
-                <a href="src/planets.html"> Planets </a>
-              </li>
-            </ul>
-          </nav>
-        </header>
-        <main>
-              <div class="bg_img">
-                <div class="top-shadow-gradient">
-                  <div class="m-container">
-                    <div class="m2-container">
-                    <h1 class="text-one">Comics, good magazines without limits and much more</h1>  
-                    <h3 class="text-two">From €3.49. Cancel anytime.</h3>  
-                    <p class="text-three">Want to stay up to date? Enter your email address to create or reactivate a COMICS ZONE subscription.</p>  
-                    <div class="f-email">
-                      <input
-                        type="text"
-                        class="f-form"
-                        name="email"
-                        placeholder="Dirección de correo electrónico"
-                      />
-                      <a id="button"
-                        ><img
-                          src="https://www.vans.it/ns-eu/vans-eu/dev/img/icons/arrow_right.svg"
-                      /></a>
-                    </div>
-                    </div>
-                </div>
-                </div>
+    <header>
+      <nav>
+        <ul>
+          <li class="logo">
+            <a href="/index.html"> Home </a>
+          </li>
+          <li>
+            <a href="src/characters.html"> Characters </a>
+          </li>
+          <li>
+            <a href="src/planets.html"> Planets </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="bg_img">
+        <div class="shadow-gradient">
+          <div class="m-container">
+            <div class="m2-container">
+              <div class="main-text">
+                <h1>
+                  Comics and good magazines without limits and much more
+                </h1>
+                <h3 class="">From €3.49. Cancel anytime.</h3>
+                <p class="">
+                  Want to stay up to date? Enter your email address to create or
+                  reactivate a COMICS ZONE subscription.
+                </p>
               </div>
-        </main>
-        <footer class="">
-          <div class="f-rows">
-            <div class="f-policy-container">
-              <a class="bottom-links">Sostenibilidad y Responsabilidad</a>
-              <a class="bottom-links">Información sobre Pago</a>
-              <a class="bottom-links">Política de Privacidad</a>
-              <a class="bottom-links">Términos de Uso del Sitio Web</a>
-              <a class="bottom-links">Condiciones de Venta</a>
-              <a class="bottom-links">Declaración de Conformidad</a>
-              <a class="bottom-links">Preferencias de consentimiento</a>
+              <div class="email-container">
+                  <input
+                    type="text"
+                    class="f-form"
+                    name="email"
+                    placeholder="Dirección de correo electrónico"
+                  />
+                  <a id="button"
+                    ><img
+                      src="https://www.vans.it/ns-eu/vans-eu/dev/img/icons/arrow_right.svg"
+                  /></a>
+              </div>
             </div>
           </div>
-          <div class="f-rows f-inc">
-            © 2024 COMICS ZONE  Inc
-          </div>
-        </footer>    
+        </div>
+      </div>
+    </main>
+    <footer class="">
+      <div class="f-rows">
+        <div class="f-policy-container">
+          <a class="bottom-links">Sostenibilidad y Responsabilidad</a>
+          <a class="bottom-links">Información sobre Pago</a>
+          <a class="bottom-links">Política de Privacidad</a>
+          <a class="bottom-links">Términos de Uso del Sitio Web</a>
+          <a class="bottom-links">Condiciones de Venta</a>
+          <a class="bottom-links">Declaración de Conformidad</a>
+          <a class="bottom-links">Preferencias de consentimiento</a>
+        </div>
+      </div>
+      <div class="f-rows f-inc">© 2024 COMICS ZONE Inc</div>
+    </footer>
   </body>
 </html>
