fix: mobile responsive

--- a/index.html
+++ b/index.html
@@ -9,48 +9,40 @@
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li class="logo">
-            <a href="/index.html"> Home </a>
-          </li>
-          <li>
-            <a href="src/characters.html"> Characters </a>
-          </li>
-          <li>
-            <a href="src/planets.html"> Planets </a>
-          </li>
-        </ul>
-      </nav>
+      <ul>
+        <li class="logo">
+          <a href="/index.html"> Home </a>
+        </li>
+        <li>
+          <a href="src/characters.html"> Characters </a>
+        </li>
+        <li>
+          <a href="src/planets.html"> Planets </a>
+        </li>
+      </ul>
     </header>
     <main>
-      <div class="bg_img">
-        <div class="shadow-gradient">
-          <div class="m-container">
-            <div class="m2-container">
-              <div class="main-text">
-                <h1>
-                  Comics and good magazines without limits and much more
-                </h1>
-                <h3 class="">From €3.49. Cancel anytime.</h3>
-                <p class="">
-                  Want to stay up to date? Enter your email address to create or
-                  reactivate a COMICS ZONE subscription.
-                </p>
-              </div>
-              <div class="email-container">
-                  <input
-                    type="text"
-                    class="f-form"
-                    name="email"
-                    placeholder="Dirección de correo electrónico"
-                  />
-                  <a id="button"
-                    ><img
-                      src="https://www.vans.it/ns-eu/vans-eu/dev/img/icons/arrow_right.svg"
-                  /></a>
-              </div>
-            </div>
+      <div class="m-container">
+        <div class="m2-container">
+          <div class="main-text">
+            <h1>Comics and good magazines without limits and much more</h1>
+            <h3 class="">From €3.49. Cancel anytime.</h3>
+            <p class="">
+              Want to stay up to date? Enter your email address to create or
+              reactivate a COMICS ZONE subscription.
+            </p>
+          </div>
+          <div class="email-container">
+            <input
+              type="text"
+              class="f-form"
+              name="email"
+              placeholder="Dirección de correo electrónico"
+            />
+            <a id="button"
+              ><img
+                src="https://www.vans.it/ns-eu/vans-eu/dev/img/icons/arrow_right.svg"
+            /></a>
           </div>
         </div>
       </div>
