finish proyect, i could add anoter things

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
         </div>
       </div>
     </main>
-    <footer class="">
+    <footer >
       <div class="f-rows">
         <div class="f-policy-container">
-          <a class="bottom-links">Sostenibilidad y Responsabilidad</a>
-          <a class="bottom-links">Información sobre Pago</a>
-          <a class="bottom-links">Política de Privacidad</a>
-          <a class="bottom-links">Términos de Uso del Sitio Web</a>
-          <a class="bottom-links">Condiciones de Venta</a>
-          <a class="bottom-links">Declaración de Conformidad</a>
-          <a class="bottom-links">Preferencias de consentimiento</a>
+          <a class="bottom-links">Sustainability and Responsibility</a>
+          <a class="bottom-links">Payment Information</a>
+          <a class="bottom-links">Privacy Policy</a>
+          <a class="bottom-links">Website Terms of Use</a>
+          <a class="bottom-links">Conditions of Sale</a>
+          <a class="bottom-links">Declaration of Conformity</a>
+          <a class="bottom-links">Consent preferences</a>
         </div>
       </div>
       <div class="f-rows f-inc">© 2024 COMICS ZONE Inc</div>
