--- a/src/characters.html
+++ b/src/characters.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="../styles/css/characters.css" />
     <title>DragonBall API</title>
-</head>
-<body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-</body>
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li class="logo">
+          <a href="/index.html"> Home </a>
+        </li>
+        <li>
+          <a href="../src/characters.html"> Characters </a>
+        </li>
+        <li>
+          <a href="../src/planets.html"> Planets </a>
+        </li>
+      </ul>
+    </header>
+    <main>
+      <div class="char_margin-container">
+        <div class="char_flex-container" id="characters_list"></div>
+      </div>
+    </main>
+    <footer class>
+      <div class="f-rows">
+        <div class="f-policy-container">
+          <a class="bottom-links">Sustainability and Responsibility</a>
+          <a class="bottom-links">Payment Information</a>
+          <a class="bottom-links">Privacy Policy</a>
+          <a class="bottom-links">Website Terms of Use</a>
+          <a class="bottom-links">Conditions of Sale</a>
+          <a class="bottom-links">Declaration of Conformity</a>
+          <a class="bottom-links">Consent preferences</a>
+        </div>
+      </div>
+      <div class="f-rows f-inc">© 2024 COMICS ZONE Inc</div>
+    </footer>
+    <script src="../js/characters.js"></script>
+  </body>
 </html>
