--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header>
       <ul>
         <li class="logo">
-          <a href="/index.html"> Home </a>
+          <a href="/"> Home </a>
         </li>
         <li>
-          <a href="src/characters.html"> Characters </a>
+          <a href="./src/characters.html"> Characters </a>
         </li>
         <li>
-          <a href="src/planets.html"> Planets </a>
+          <a href="./src/planets.html"> Planets </a>
         </li>
       </ul>
     </header>
