--- a/src/planets.html
+++ b/src/planets.html
@@ -11,7 +11,7 @@
     <header>
       <ul>
         <li class="logo">
-          <a href="/index.html"> Home </a>
+          <a href="/"> Home </a>
         </li>
         <li>
           <a href="../src/characters.html"> Characters </a>
