--- a/src/characters.html
+++ b/src/characters.html
@@ -14,10 +14,10 @@
           <a href="../index.html"> Home </a>
         </li>
         <li>
-          <a href="../src/characters.html"> Characters </a>
+          <a href="./characters.html"> Characters </a>
         </li>
         <li>
-          <a href="../src/planets.html"> Planets </a>
+          <a href="./planets.html"> Planets </a>
         </li>
       </ul>
     </header>
