--- a/src/planets.html
+++ b/src/planets.html
@@ -11,13 +11,13 @@
     <header>
       <ul>
         <li class="logo">
-          <a href="/"> Home </a>
+          <a href="../index.html"> Home </a>
         </li>
         <li>
-          <a href="../src/characters.html"> Characters </a>
+          <a href="./characters.html"> Characters </a>
         </li>
         <li>
-          <a href="../src/planets.html"> Planets </a>
+          <a href="./planets.html"> Planets </a>
         </li>
       </ul>
     </header>
