fix: putting the header fixed a little transparent

--- a/src/characters.html
+++ b/src/characters.html
@@ -8,7 +8,7 @@
     <title>DragonBall API</title>
   </head>
   <body>
-    <header>
+    <header class="fixed-header">
       <ul>
         <li class="logo">
           <a href="../index.html"> Home </a>
@@ -26,7 +26,7 @@
         <div class="char_flex-container" id="characters_list"></div>
       </div>
     </main>
-    <footer class>
+    <footer>
       <div class="f-rows">
         <div class="f-policy-container">
           <a class="bottom-links">Sustainability and Responsibility</a>
