--- a/src/planets.html
+++ b/src/planets.html
@@ -8,7 +8,7 @@
     <title>DragonBall API</title>
   </head>
   <body>
-    <header>
+    <header class="fixed-header">
       <ul>
         <li class="logo">
           <a href="../index.html"> Home </a>
