--- a/src/characters.html
+++ b/src/characters.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="../styles/css/back_img_pages.css" />
     <link rel="stylesheet" href="../styles/css/characters.css" />
     <title>DragonBall API</title>
   </head>
@@ -21,6 +22,15 @@
         </li>
       </ul>
     </header>
+    <div class="back-img">
+      <div class="back-img-shadow">
+        <div class="back-img-container">
+          <h1 class="back-img-main-text">
+            Receive a 50% discount on your first purchase
+          </h1>
+        </div>
+      </div>
+    </div>
     <main>
       <div class="char_margin-container">
         <div class="char_flex-container" id="characters_list"></div>
