--- a/src/planets.html
+++ b/src/planets.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="../styles/css/back_img_pages.css" />
     <link rel="stylesheet" href="../styles/css/planets.css" />
     <title>DragonBall API</title>
   </head>
@@ -21,6 +22,13 @@
         </li>
       </ul>
     </header>
+    <div class="back-img">
+      <div class="back-img-shadow">
+        <div class="back-img-container">
+          <h1 class="back-img-main-text">Come and visit us, don't be shy!</h1>
+        </div>
+      </div>
+    </div>
     <main>
       <div class="pla_margin-container">
         <div class="pla_flex-container" id="planets_list"></div>
