--- a/src/planets.html
+++ b/src/planets.html
@@ -37,13 +37,13 @@
     <footer class>
       <div class="f-rows">
         <div class="f-policy-container">
-          <div class="bottom-links">Sustainability and Responsibility</div>
-          <div class="bottom-links">Payment Information</div>
-          <div class="bottom-links">Privacy Policy</div>
-          <div class="bottom-links">Website Terms of Use</div>
-          <div class="bottom-links">Conditions of Sale</div>
-          <div class="bottom-links">Declaration of Conformity</div>
-          <div class="bottom-links">Consent preferences</div>
+          <div><a class="bottom-links">Sustainability and Responsibility</a></div>
+          <div><a class="bottom-links">Payment Information</a></div>
+          <div><a class="bottom-links">Privacy Policy</a></div>
+          <div><a class="bottom-links">Website Terms of Use</a></div>
+          <div><a class="bottom-links">Conditions of Sale</a></div>
+          <div><a class="bottom-links">Declaration of Conformity</a></div>
+          <div><a class="bottom-links">Consent preferences</a></div>
         </div>
       </div>
       <div class="f-rows f-inc">© 2024 COMICS ZONE Inc</div>
