--- a/src/planets.html
+++ b/src/planets.html
@@ -37,13 +37,13 @@
     <footer class>
       <div class="f-rows">
         <div class="f-policy-container">
-          <div><a class="bottom-links">Sustainability and Responsibility</a></div>
-          <div><a class="bottom-links">Payment Information</a></div>
-          <div><a class="bottom-links">Privacy Policy</a></div>
-          <div><a class="bottom-links">Website Terms of Use</a></div>
-          <div><a class="bottom-links">Conditions of Sale</a></div>
-          <div><a class="bottom-links">Declaration of Conformity</a></div>
-          <div><a class="bottom-links">Consent preferences</a></div>
+          <a class="bottom-links">Sustainability and Responsibility</a>
+          <a class="bottom-links">Payment Information</a>
+          <a class="bottom-links">Privacy Policy</a>
+          <a class="bottom-links">Website Terms of Use</a>
+          <a class="bottom-links">Conditions of Sale</a>
+          <a class="bottom-links">Declaration of Conformity</a>
+          <a class="bottom-links">Consent preferences</a>
         </div>
       </div>
       <div class="f-rows f-inc">© 2024 COMICS ZONE Inc</div>
